--- a/Maktub/index.html
+++ b/Maktub/index.html
@@ -42,31 +42,30 @@
               </span>
             </a>
           </div>
-
-          <!-- Button 2 -->
-          <div class="col-12 col-sm-6 col-lg-4 d-flex justify-content-center">
-            <a class="brand-tile" href="./Registro" aria-label="Acceso 2">
-              <span class="brand-tile__inner">
-                Crear Cuenta
-              </span>
-            </a>
-
-          </div>
-
-          <!-- Button 3 -->
-          <div class="col-12 col-sm-6 col-lg-4 d-flex justify-content-center">
-            <a class="brand-tile" href="panel-cm-maktub/index.html" aria-label="Acceso 3">
-              <span class="brand-tile__inner">
-                Back Office
-              </span>
-            </a>
-          </div>
-
+          
           <!-- Button 4 -->
           <div class="col-12 col-sm-6 col-lg-4 d-flex justify-content-center">
             <a class="brand-tile" href="#" aria-label="Acceso 4">
               <span class="brand-tile__inner">
                 HubMaktub
+              </span>
+            </a>
+          </div>
+
+          <!-- Button 5 -->
+          <div class="col-12 col-sm-6 col-lg-4 d-flex justify-content-center">
+            <a class="brand-tile" href="Backoffice/index.html" aria-label="Acceso 4">
+              <span class="brand-tile__inner">
+                BackOffice Maktub
+              </span>
+            </a>
+          </div>
+
+          <!-- Button 6 -->
+          <div class="col-12 col-sm-6 col-lg-4 d-flex justify-content-center">
+            <a class="brand-tile" href="#" aria-label="Acceso 4">
+              <span class="brand-tile__inner">
+                MBK Website
               </span>
             </a>
           </div>
